fix(code-preview): update overflow to auto IX-4305

--- a/packages/html-test-app/src/preview-examples/global.css
+++ b/packages/html-test-app/src/preview-examples/global.css
@@ -14,7 +14,7 @@
 @import '@siemens/ix/dist/siemens-ix/siemens-ix.css';
 
 html {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: auto;
 }
